---
layout: simon-default
title: Change Log
root-url: ../
simon-tab-class: tabbar-tab-highlighted
---
h1. Version 0.1.8, March 2012


h1. Version 0.1.7, March 2012

* Added a macro: SIIsViewPresent.
* Renamed SITapControl to SITapView.
* Renamed SISWipeControl to SISWipeView.
* Modded SITapView to accept both a NSString *query and a UIView *view as a parameter and to return the view it tapped.
* Modded SISwipeView to accept both a NSString *query and a UIView *view as a parameter and to return the view it swiped.
* Cleaned up some old references in SIUIApplication.
* Added new macros SIAssertViewPresent and SIAssertViewNotPresent.
* Added new macro SIAssertLabelTextEquals.
* Fixed issue where creating UITouch and UIEvents on a background thread would trigger a 0xbbadbeef crash.
* Refactored SIUIEventGenerator into an abstract class. 
* Updated logging of UI to include all windows being displayed. This now picks up the keyboard.
* Refactored event sending code and background sending detection. Now a lot simpler due to using blocks.
* Removed caching of view handers because we simply don't need it. Also made code simpler.
* Added the SIEnterText macro.
* New dNodi query attributes: protocol and isKindOfClass.

h1. Version 0.1.6, March 2012

* Added more data to the display of a UI tree by breaking out the visitor code using the visitor pattern and delegate pattern.
* Added handlers for UIButtons and UILabels so that the print tree function can work better.
* Added label text, button titles, UIView tags, accessibility Identifiers, values and labels as attributes to be printed.
* Updated dNodi to 0.3.4 to fix issues with name clashes on properties of nodes.
* Added a new macro which waits for animations to finish on a specific UIView.

h1. Version 0.1.5, March 2012

* Switched in app report to avoid using the root view controller because not every app has one.

h1. Version 0.1.4, March 2012

* Fixed missing header. 
* Adjusted so that macros work in ARC projects.