@@ -9,23 +9,31 @@
 #import "SIStep.h"
 #import <dUsefulStuff/DCCommon.h>
 #import "NSString+Simon.h"
+#import <dUsefulStuff/NSObject+dUsefulStuff.h>
+
+@interface SIStep()
+-(NSError *) errorForException;
+@end
 
 @implementation SIStep
 
-@synthesize keyword;
-@synthesize command;
-@synthesize stepMapping;
+@synthesize keyword = keyword_;
+@synthesize command = command_;
+@synthesize stepMapping = stepMapping_;
+@synthesize exception = exception_;
+@synthesize executed = executed_;
 
 -(void) dealloc {
 	self.command = nil;
 	self.stepMapping = nil;
+	self.exception = nil;
 	[super dealloc];
 }
 
 -(id) initWithKeyword:(SIKeyword) aKeyword command:(NSString *) theCommand {
 	self = [super init];
 	if (self) {
-		keyword = aKeyword;
+		keyword_ = aKeyword;
 		self.command = theCommand;
 	}
 	return self;
@@ -46,7 +54,32 @@
 }
 
 -(BOOL) invokeWithObject:(id) object error:(NSError **) error {
-	return [self.stepMapping invokeWithCommand:self.command object:object error:error];
+	@try {
+		BOOL success = [self.stepMapping invokeWithCommand:self.command object:object error:error];
+		self.executed = YES;
+		return success;
+	}
+	@catch (NSException *thrownException) {
+		self.exception = thrownException;
+		DC_LOG(@"Caught exception: %@", [self.exception reason]);
+		*error = [self errorForException];
+		return NO;
+	}
 }
+
+-(NSError *) errorForException {
+	
+	if ([self.exception.name isEqualToString:@"NSUnknownKeyException"]) {
+		return [self errorForCode:SIErrorUnknownProperty 
+						  errorDomain:SIMON_ERROR_DOMAIN 
+					shortDescription:@"Unknown property" 
+						failureReason:[NSString stringWithFormat:@"Unknown property: %@",[self.exception reason]]];
+	} 
+	return [self errorForCode:SIErrorExceptionCaught 
+					  errorDomain:SIMON_ERROR_DOMAIN 
+				shortDescription:@"Exception caught"
+					failureReason:[NSString stringWithFormat:@"Exception caught: %@",[self.exception reason]]];
+}
+
 
 @end
